# airflow-task-pytest

./: .env.production  .env.test  .gitignore  README.MD  dag.py  dag_test.py  pyproject.toml  pytest.ini  task_function.py
